--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "keywords": ["bajaj", "bfhl", "backend", "api"],
+  "keywords": [
+    "bajaj",
+    "bfhl",
+    "backend",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "openai": "^6.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
